src/test/ui/associated-types/higher-ranked-projection.good.stderr
error: compilation successful
  --> $DIR/higher-ranked-projection.rs:24:1
   |
LL | / fn main() { //[good]~ ERROR compilation successful
LL | |     foo(());
LL | |     //[bad]~^ ERROR mismatched types
LL | | }
   | |_^

error: aborting due to previous error

